Fix heading text in index.html

--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
 /* ================= TEXT ROTATION ================= */
 const headings = [
   "Webhosting auf dem\nnächsten Level",
-  "ALL IN ONE mit RendixNeXus",
-  "Unsere Website im Wert\nvon 500 bis 5000 Euro"
+  "ALL IN ONE mit RendixNexus",
+  "Unsere Website haben Webdeveloper Wert\n"
 ];
 
 let current = 0;
