Update buttons to include purchase links and prices.

--- a/index.html
+++ b/index.html
@@ -214,19 +214,25 @@
     <div class="card">
       <h3>Basic</h3>
       <p>Persönlich erstellte Website von unseren Designern mit bis zu 10 Bildern und 5 Unterseiten.</p>
-      <button>Basic wählen</button>
+      <button onclick="window.location.href='https://buy.stripe.com/test_bJeaEXcIRfXG9ywa9p1sQ00'">Basic 10 €</button>
+
+      
     </div>
 
     <div class="card">
       <h3>Premium</h3>
       <p>Proffesionelle Wesite für Ihr Unternehmen, Beratung + Designerleistung & Erreichbarkeit unter den Bürozeiten Persönlich für Sie.</p>
-      <button>Premium wählen</button>
+
+      <button onclick="window.location.href='https://buy.stripe.com/test_3cI28reQZ26QcKIchx1sQ02'">Premium 70 €</button>
+   
+      
     </div>
 
     <div class="card">
       <h3>VIP</h3>
       <p>24/7 Erreichbarkeit, persönliche Betreuung, kompletter Webshop & E-Commerce-System. Individuelle Videos, mit Animationen.</p>
-      <button>VIP wählen</button>
+      <button onclick="window.location.href='https://buy.stripe.com/test_3cI28reQZ26QcKIchx1sQ02'">VIP 120 €</button>
+   
     </div>
 
   </div>
@@ -303,9 +309,9 @@
 
   <p style="margin-top:40px; font-size:0.85rem; color:#888;">© 2025 Rendix Nexus GmbH. Alle Rechte vorbehalten.</p>
 </footer>
-
-
 <script>
+
+  
 /* ================= TEXT ROTATION ================= */
 const headings = [
   "Webhosting auf dem\nnächsten Level",
