--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div class="card">
       <h3>Basic</h3>
       <p>Persönlich erstellte Website von unseren Designern mit bis zu 10 Bildern und 5 Unterseiten.</p>
-      <button onclick="window.location.href='https://buy.stripe.com/test_bJeaEXcIRfXG9ywa9p1sQ00'">Basic 10 €</button>
+      <button onclick="window.location.href='https://buy.stripe.com/fZu28s4ka7j7dlU3ZL97G06'>Basic 10 €</button>
 
       
     </div>
@@ -223,7 +223,7 @@
       <h3>Premium</h3>
       <p>Proffesionelle Wesite für Ihr Unternehmen, Beratung + Designerleistung & Erreichbarkeit unter den Bürozeiten Persönlich für Sie.</p>
 
-      <button onclick="window.location.href='https://buy.stripe.com/test_3cI28reQZ26QcKIchx1sQ02'">Premium 70 €</button>
+      <button onclick="window.location.href='https://buy.stripe.com/28EcN6cQG1YN4Po1RD97G05'>Premium 70 €</button>
    
       
     </div>
@@ -231,7 +231,7 @@
     <div class="card">
       <h3>VIP</h3>
       <p>24/7 Erreichbarkeit, persönliche Betreuung, kompletter Webshop & E-Commerce-System. Individuelle Videos, mit Animationen.</p>
-      <button onclick="window.location.href='https://buy.stripe.com/test_3cI28reQZ26QcKIchx1sQ02'">VIP 120 €</button>
+      <button onclick="window.location.href='https://buy.stripe.com/6oU3cwaIy7j72Hg2VH97G04'>VIP 120 €</button>
    
     </div>
 
