--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </div>
     </div>
 
-    <button class="hero-button">Jetzt starten</button>
+     <button class="hero-button" onclick="window.location.href='bestellen.html'">Jetzt bestellen</button>
   </div>
 </div>
 
